--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 <meta name="exoclick-site-verification" content="8c9c98d9de64ecb0259e88e870884d1e">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet" crossorigin="anonymous">
 <link rel="stylesheet" href="https://www.myinstants.com/media/css/A.external.css.pagespeed.cf.uxZkR9uc19.css" />
-<script async src="https://www.myinstants.com/media/js/external.js.pagespeed.ce.reCHpXFpfD.js"></script>
 <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
 </head>
 <body>
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-bar"  style="background-color: cadetblue;">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-bar"  style="background-color: rgb(50, 81, 149);">
 <div class="container-fluid justify-content-between flex-row">
   <div class="my-1">
-    <a id="brand" class="navbar-brand ms-3">PopeCat</a>
+    <a id="brand" class="navbar-brand ms-3">ㄅ主播生日(試做中)</a>
   </div>
 </div>
 </nav>
@@ -96,21 +96,19 @@
 </div>
 </div>
 
+<!-- 中間按鈕區塊 -->
 <div id="instants_container">
-<div class="instant">
-<div class="circle small-button-background" style="background-color:#0066cd;"></div>
-<button class="small-button" onclick="play('https://storage.googleapis.com/button-media/%E5%B0%B1%E4%BD%A0%E5%9C%A8%E6%90%9E%E8%80%B6.mp3', 'loader-214842', 'mweoji-14232')" title="Play 뭐지? sound" type="button"></button>
-<div id="loader-214842" class="loader"></div>
-<div class="small-button-shadow"></div>
-<a href="/en/instant/mweoji-14232/" class="instant-link link-secondary">就你在搞誒</a>
-</div>
-  <div class="instant">
-  <div class="circle small-button-background" style="background-color:#0066cd;"></div>
-  <button class="small-button" onclick="play('./media/就你在搞2.mp3', 'loader-214842', 'mweoji-14232')" title="Play 뭐지? sound" type="button"></button>
-  <div id="loader-214842" class="loader"></div>
-  <div class="small-button-shadow"></div>
-  <a href="/en/instant/mweoji-14232/" class="instant-link link-secondary">就你在搞</a>
-</div>
+
+ <!-- 迴圈 v-for -->
+  <div class="instant" v-for="file in soundList">
+    <div class="circle small-button-background" style="background-color:#1582f0;"></div>
+    <button class="small-button" v-on:click="play(file.name)" type="button"></button>
+    <div class="small-button-shadow"></div>
+    <a class="instant-link link-secondary">{{file.name}}</a>
+  </div>
+
+
+
 
 </div>
 <div id="loading"></div>
@@ -118,8 +116,8 @@
 </div>
 </div>
 
-<script>if('serviceWorker'in navigator){navigator.serviceWorker.register('/sw.js').then(function(registration){console.log('ServiceWorker registration successful with scope: ',registration.scope);}).catch(function(err){console.log('ServiceWorker registration failed: ',err);});}</script>
 <script>
+  var fileDomain = "https://github.com/gordon104532/button_with_sound/raw/main/media/" 
     function infiniteScroll() {
       let responseBuffer = [];
       let requestPending = false;
@@ -206,8 +204,70 @@
     }
     infiniteScroll();
   </script>
+
+<script>
+  var app4 = new Vue({
+    el: '#instants_container',
+    data:{
+      soundList:[
+        {name:'ㄅㄆㄇ安安'},
+        {name:'哈囉'},
+        {name:'生日快熱'},
+        {name:'哇賽'},
+        {name:'哇賽2'},
+        {name:'ㄅㄅㄇ'},
+        {name:'天使般的嗓音'},
+        {name:'歐買尬'},
+        {name:'真的很可愛'},
+        {name:'暈爛了'},
+        {name:'阿巴阿巴'},
+        {name:'啵啵啵'},
+        {name:'有人在搞我的表單'},
+        {name:'就你在搞耶'},
+        {name:'就你在搞'},
+        {name:'真的抱歉'},
+        {name:'怎麼還有十分鐘'},
+        {name:'駿我大哥'},
+      ]
+    },
+    methods: {
+    play: function (file) {
+      playAudio(fileDomain + file + '.mp3')
+    }
+  }
+  });
+
+  var audio = new Audio();
+  audio.preload = 'none';
+  var hasErrors;
+  var lastUrl;
+  var canPause;
+  function playAudio(url) {
+    if (canPause) {
+        audio.pause();
+        audio.currentTime = 0;
+    }
+    if (lastUrl != url || hasErrors) {
+        audio.src = url;
+        lastUrl = url;
+        hasErrors = false;
+        canPause = false;
+        audio.onerror = function() {
+            hasErrors = true
+        }
+        ;
+    }
+    var playPromise = audio.play();
+    if (playPromise !== undefined) {
+        playPromise.then(_=>{
+            canPause = true;
+        }
+        ).catch(error=>{
+            hasErrors = true;
+        }
+        );
+    }
+}
+  </script>
 </body>
 </html>
-<script data-pagespeed-no-defer>//<![CDATA[
-(function(){function f(b){var a=window;if(a.addEventListener)a.addEventListener("load",b,!1);else if(a.attachEvent)a.attachEvent("onload",b);else{var c=a.onload;a.onload=function(){b.call(this);c&&c.call(this)}}};window.pagespeed=window.pagespeed||{};var k=window.pagespeed;function l(b,a,c,g,h){this.h=b;this.i=a;this.l=c;this.j=g;this.b=h;this.c=[];this.a=0}l.prototype.f=function(b){for(var a=0;250>a&&this.a<this.b.length;++a,++this.a)try{document.querySelector(this.b[this.a])&&this.c.push(this.b[this.a])}catch(c){}this.a<this.b.length?window.setTimeout(this.f.bind(this),0,b):b()};k.g=function(b,a,c,g,h){if(document.querySelector&&Function.prototype.bind){var d=new l(b,a,c,g,h);f(function(){window.setTimeout(function(){d.f(function(){for(var a="oh="+d.l+"&n="+d.j,a=a+"&cs=",b=0;b<d.c.length;++b){var c=0<b?",":"",c=c+encodeURIComponent(d.c[b]);if(131072<a.length+c.length)break;a+=c}k.criticalCssBeaconData=a;var b=d.h,c=d.i,e;if(window.XMLHttpRequest)e=new XMLHttpRequest;else if(window.ActiveXObject)try{e=new ActiveXObject("Msxml2.XMLHTTP")}catch(m){try{e=new ActiveXObject("Microsoft.XMLHTTP")}catch(n){}}e&&(e.open("POST",b+(-1==b.indexOf("?")?"?":"&")+"url="+encodeURIComponent(c)),e.setRequestHeader("Content-Type","application/x-www-form-urlencoded"),e.send(a))})},0)})}};k.criticalCssBeaconInit=k.g;})();pagespeed.selectors=["#breadcrumbs","#breadcrumbs a","#breadcrumbs li","#breadcrumbs ol","#category-form","#content","#footer-copyright","#install-app-desktop img","#install-app-mobile img","#instant-embed","#instant-form table","#instant-page-background","#instant-page-button","#instant-page-description","#instant-page-extra-buttons-container","#instant-page-likes","#instant-page-tags","#instant-page-title","#instant_image","#instants_container","#instants_container td","#likes","#loading","#login-dropdown .dropdown-menu","#nav-login","#recommendations","#registration-title","#results-pagination","#select-category","#share-box","#share-box img","#side-menu-icon","#side-menu-icon img","#sticky-left","#sticky-right","#toast-container","#top-ad","#user-profile-menu","#user-profile-menu li","#user-profile-title",".bg-bar",".card",".circle",".collection",".collection img",".collection p",".desktop-banner-ad",".desktop-larger-banner-ad",".embed",".instant",".instant-action-button",".instant-action-button-icon",".instant-link",".instant-page-extra-button",".instant-page-extra-button-icon",".instants-container-title",".large-banner-ad",".large-button",".large-button-background",".large-button-shadow",".large-rectangle-ad",".link-secondary",".loader",".loader-large",".mobile-banner-ad",".multiaspect-banner-ad",".multiaspect-large-banner-ad",".nav-icon-left",".nav-icon-right",".onetrust-link",".outstream-video-ad",".page-footer .container",".page-footer li",".page-item .page-link",".recommendation",".recommendation img",".result-page-instant-sharebox",".search-form img",".search-form input",".share-icon",".skyscraper-ad",".skyscraper-large-ad",".small-button",".small-button-background",".small-button-shadow",".text-right",".user-profile-empty"];pagespeed.criticalCssBeaconInit('/mod_pagespeed_beacon','http://www.myinstants.com/en/index/kr/','0dGVW-62BN','G2nHyOHRgDA',pagespeed.selectors);
-//]]></script>
