--- a/index.html
+++ b/index.html
@@ -5,68 +5,16 @@
 <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 <link rel="preconnect" href="https://cdn4.buysellads.net" crossorigin>
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" as="script">
-
-<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-M29CQ4QLX7');</script>
 <title>
   
-    Myinstants | The largest instant sound buttons website in Korea, Republic of!
+  ㄅㄅㄅ
   
 </title>
-<meta name="description" content="Myinstants is where you discover funny instant sound buttons from Korea, Republic of. HAVE FUN!" />
-<meta property="og:title" content="Myinstants - Trending Funny Sounds of Korea, Republic of" />
-<meta property="og:description" content="Click here to play the sounds" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.myinstants.com/en/index/kr/" />
-<meta property="og:image" content="https://www.myinstants.com/media/images/myinstants-opengraph-v4.jpg" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="1200" />
-<meta property="og:image" content="https://www.myinstants.com/media/images/myinstants-opengraph-whatsapp-v1.jpg" />
-<meta property="og:image:width" content="400" />
-<meta property="og:image:height" content="400" />
-<meta property="og:site_name" content="myinstants" />
-<meta property="fb:app_id" content="429381653766621" />
-<meta property="fb:admins" content="100000227055635" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@myinstants" />
-<meta name="twitter:title" content="Myinstants - Trending Funny Sounds of Korea, Republic of" />
-<meta name="twitter:description" content="Click here to play the sounds" />
-<meta name="twitter:image" content="https://www.myinstants.com/media/images/myinstants-opengraph-v4.jpg" />
-<meta name="keywords" content="soundboard, sound buttons, sound board, myinstants, my instants, instant button, instant buttons, funny sounds, funny gifs, internet memes, viral sounds, meme sounds" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="Myinstants">
+<meta name="description" content="可愛吧" />
+<meta property="og:title" content="ㄅ主播" />
+<meta property="og:description" content="ㄅ主播ㄉ按鈕" />
 <meta name="color-scheme" content="light dark">
-<link rel="alternate" hreflang="en" href="https://www.myinstants.com/en/index/kr/" />
-<link rel="alternate" hreflang="de" href="https://www.myinstants.com/de/index/kr/" />
-<link rel="alternate" hreflang="pt" href="https://www.myinstants.com/pt/index/kr/" />
-<link rel="alternate" hreflang="es" href="https://www.myinstants.com/es/index/kr/" />
-<link rel="alternate" hreflang="fr" href="https://www.myinstants.com/fr/index/kr/" />
-<link rel="alternate" hreflang="nl" href="https://www.myinstants.com/nl/index/kr/" />
-<link rel="alternate" hreflang="hi" href="https://www.myinstants.com/hi/index/kr/" />
-<link rel="alternate" hreflang="it" href="https://www.myinstants.com/it/index/kr/" />
-<link rel="alternate" hreflang="ja" href="https://www.myinstants.com/ja/index/kr/" />
-<link rel="alternate" hreflang="ko" href="https://www.myinstants.com/ko/index/kr/" />
-<link rel="alternate" hreflang="ru" href="https://www.myinstants.com/ru/index/kr/" />
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Myinstants">
-<link rel="apple-touch-icon" sizes="57x57" href="https://www.myinstants.com/media/apple-touch-icon-57x57.png.pagespeed.ce.YD7GECpTXP.png">
-<link rel="apple-touch-icon" sizes="60x60" href="https://www.myinstants.com/media/apple-touch-icon-60x60.png.pagespeed.ce.lcxzkWjiJI.png">
-<link rel="apple-touch-icon" sizes="72x72" href="https://www.myinstants.com/media/apple-touch-icon-72x72.png.pagespeed.ce.6GzcZmDQUf.png">
-<link rel="apple-touch-icon" sizes="76x76" href="https://www.myinstants.com/media/apple-touch-icon-76x76.png.pagespeed.ce.TDrmc1Ub1f.png">
-<link rel="apple-touch-icon" sizes="114x114" href="https://www.myinstants.com/media/apple-touch-icon-114x114.png.pagespeed.ce.feF2wiHqSZ.png">
-<link rel="apple-touch-icon" sizes="120x120" href="https://www.myinstants.com/media/apple-touch-icon-120x120.png.pagespeed.ce.SWgFiuBzeg.png">
-<link rel="apple-touch-icon" sizes="144x144" href="https://www.myinstants.com/media/apple-touch-icon-144x144.png.pagespeed.ce.kvdBhFKHrA.png">
-<link rel="apple-touch-icon" sizes="152x152" href="https://www.myinstants.com/media/apple-touch-icon-152x152.png.pagespeed.ce.uyhinbEE6H.png">
-<link rel="apple-touch-icon" sizes="180x180" href="https://www.myinstants.com/media/apple-touch-icon-180x180.png.pagespeed.ce.aZ4QMpD0kF.png">
-<link rel="icon" type="image/png" href="https://www.myinstants.com/media/favicon-32x32.png.pagespeed.ce.o9uwmNCqfe.png" sizes="32x32">
-<link rel="icon" type="image/png" href="https://www.myinstants.com/media/android-chrome-192x192.png.pagespeed.ce.lhEKCldimn.png" sizes="192x192">
-<link rel="icon" type="image/png" href="https://www.myinstants.com/media/favicon-96x96.png.pagespeed.ce.WhVd5X9GRF.png" sizes="96x96">
-<link rel="icon" type="image/png" href="https://www.myinstants.com/media/favicon-16x16.png.pagespeed.ce.BZlBl4WR_n.png" sizes="16x16">
-<link rel="mask-icon" href="https://www.myinstants.com/media/safari-pinned-tab.svg">
-<meta name="msapplication-TileColor" content="#f44336">
-<meta name="msapplication-TileImage" content="https://www.myinstants.com/media/mstile-144x144.png">
 <meta name="theme-color" content="#d32f2f">
-<meta name="exoclick-site-verification" content="8c9c98d9de64ecb0259e88e870884d1e">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet" crossorigin="anonymous">
 <link rel="stylesheet" href="https://www.myinstants.com/media/css/A.external.css.pagespeed.cf.uxZkR9uc19.css" />
 <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -117,7 +65,7 @@
 </div>
 
 <script>
-  var fileDomain = "https://github.com/gordon104532/button_with_sound/raw/main/media/" 
+  var fileDomain = "./media/"//"https://github.com/gordon104532/button_with_sound/raw/main/media/" 
     function infiniteScroll() {
       let responseBuffer = [];
       let requestPending = false;
