--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<div id="top" style = "user-select: none">
+<div id="top" style = "user-select: none; background-color:333;" >
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-bar" :style="{ backgroundColor: navbarBgColor }">
   <div class="container-fluid justify-content-between flex-row">
     <div class="my-1">
@@ -39,8 +39,6 @@
 <div id="sticky-right" class="skyscraper-large-ad text-right">
 </div>
 <div id="content">
-<div id="top-ad">
-<!-- <div class="multiaspect-large-banner-ad"></div> -->
 </div>
 
   <div>
@@ -83,6 +81,7 @@
         { text: '拿喔-(我也不知道叫甚麼)', url: '/846404573064200246/1175835909548154920/20211120__'},
         { text: '納納-本色', url: '/994991815650443357/1181241150464589864/20211225__' },
         { text: '納Na-The Loneliest Girl', url: '/833015408357146634/1078347095888629770/20211213-Na-The_Loneliest_Girl'},
+        { text: '波普拿-Wish You Were Gay', url: '/994991815650443357/1078346557100929126/20211213__wish_you_were_gay'},
         { text: '波普貓-When I Was Your Man', url: '/915614796014059520/1175484638840496148/20211219__When_I_Was_Your_Man'},
         { text: '波普貓-夜空中最亮的星', url: '/915614796014059520/1172935269704548442/20211215__'},
         { text: '波普貓-水星記', url: '/915614796014059520/1111357106017292478/20230406__'},
@@ -102,7 +101,13 @@
         { text: '波普貓-All I Want', url: '/915614796014059520/1096116348796547142/20211219__All_i_want'},
         { text: '波普貓-Bad Liar', url: '/915614796014059520/1181252651875307520/20211224__Bad_Liar'},
         { text: '波普貓-I Really Like You', url: '/915614796014059520/1098661901321375804/20211219__I_really_like_you'},
-        { text: '波普貓-Love Story', url: '/915614796014059520/1171871485179211856/20211224__Love_Story'}
+        { text: '波普貓-Love Story', url: '/915614796014059520/1171871485179211856/20211224__Love_Story'},
+        { text: '阿呀捏-刻在心底的名字', url: '/1000047863016992831/1104425644399525938/-'},
+        { text: '阿呀捏-下雨的聲音', url: '/1000047863016992831/1104425618508103831/-'},
+        { text: '阿呀捏-Someday or One Day', url: '/1000047863016992831/1104425571569635328/-Someday_or_One_Day'},
+        { text: '阿呀捏-下雨天', url: '/1000047863016992831/1104425542767353887/-'},
+        { text: '阿呀捏-你要的愛', url: '/1000047863016992831/1104425511779848242/-'},
+        { text: '阿呀捏-杰哥音樂劇', url: '/1000047863016992831/1104422336951767081/-'},
       ],
       currentPlayingIndex: -1,
       counter: 0,
