--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <title>納納-本色</title>
+    <meta name="description" content="meta description" />
+    <meta property="og:title" content="og:title" />
+    
+    <meta property="og:audio" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
+    <meta property="og:audio:secure_url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
+    <meta property="og:audio:type" content="audio/mpeg" />
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
