--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,21 @@
     <title>納納-本色</title>
     <meta name="description" content="meta description" />
     <meta property="og:title" content="og:title" />
+
+    <title>The Rock (1996)</title>
+    <meta property="og:title" content="納納-本色" />
+    <meta property="og:type" content="music.song" />
+    <meta property="og:url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/711181741372604477/1183340967198195752/image.png?ex=6587fb27&is=65758627&hm=f97d028132069de51f202b99745bbf1d546317c6030ce233ba1daa00e5de1215&" />
     
+    <meta property="og:audio" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
+    <meta property="og:description" 
+    content="og:description" />
+
     <meta property="og:audio" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
     <meta property="og:audio:secure_url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
     <meta property="og:audio:type" content="audio/mpeg" />
-    
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
