--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <title>納納-本色</title>
-    <meta name="description" content="meta description" />
-    <meta property="og:title" content="og:title" />
-
-    <title>The Rock (1996)</title>
-    <meta property="og:title" content="納納-本色" />
+    <title>罐製ㄉ網頁</title>
+    <meta property="og:site_name" content="罐製ㄉ網頁">
+    <meta property="og:title" content="還沒想到標題" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1152726183906119830/1184116385689907261/f778950ff01d7dd0.png" />
     <meta property="og:type" content="music.song" />
     <meta property="og:url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/711181741372604477/1183340967198195752/image.png?ex=6587fb27&is=65758627&hm=f97d028132069de51f202b99745bbf1d546317c6030ce233ba1daa00e5de1215&" />
-    
-    <meta property="og:audio" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
-    <meta property="og:description" 
-    content="og:description" />
-
     <meta property="og:audio" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
     <meta property="og:audio:secure_url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
     <meta property="og:audio:type" content="audio/mpeg" />
+
+    <link rel="alternate" type="application/json+oembed" href="https://www.youtube.com/oembed?format=json&amp;url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D-42zFfftkT0" title="(Cover)東城衛 - 夠愛">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
