--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:audio:secure_url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
     <meta property="og:audio:type" content="audio/mpeg" />
 
-    <link rel="alternate" type="application/json+oembed" href="https://www.youtube.com/oembed?format=json&amp;url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D-42zFfftkT0" title="(Cover)東城衛 - 夠愛">
+    <!-- <link rel="alternate" type="application/json+oembed" href="https://www.youtube.com/oembed?format=json&amp;url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D-42zFfftkT0" title="(Cover)東城衛 - 夠愛"> -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
