--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>罐製ㄉ網頁</title>
     <meta property="og:site_name" content="罐製ㄉ網頁">
-    <meta property="og:title" content="還沒想到標題" />
+    <meta property="og:title" content="這個是標題"/>
     <meta property="og:description" content="" />
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1152726183906119830/1184116385689907261/f778950ff01d7dd0.png" />
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1152726183906119830/1184116385689907261/f778950ff01d7dd0.png"/>
     <meta property="og:type" content="music.song" />
-    <meta property="og:url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
-    <meta property="og:audio" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
-    <meta property="og:audio:secure_url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3" />
+    <meta property="og:url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3"/>
+    <meta property="og:audio" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3"/>
+    <meta property="og:audio:secure_url" content="https://cdn.discordapp.com/attachments/915614796014059520/1111357106017292478/20230406__.mp3"/>
     <meta property="og:audio:type" content="audio/mpeg" />
 
     <!-- <link rel="alternate" type="application/json+oembed" href="https://www.youtube.com/oembed?format=json&amp;url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D-42zFfftkT0" title="(Cover)東城衛 - 夠愛"> -->
@@ -19,7 +19,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- SoundPad css -->
+    <!-- <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="preconnect" href="https://cdn4.buysellads.net" crossorigin> -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" as="script">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://www.myinstants.com/media/css/A.external.css.pagespeed.cf.uxZkR9uc19.css" />
   </head>
+
   <body style="background-color: antiquewhite;">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
