--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://www.myinstants.com/media/css/A.external.css.pagespeed.cf.uxZkR9uc19.css" />
   </head>
 
-  <body style="background-color: antiquewhite;">
+  <body class="main">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
