feat: quiz第一版隱藏，與打地鼠demo

--- a/public/index.html
+++ b/public/index.html
@@ -36,3 +36,16 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script>
+  console.log(`
+==========\n
+  大哥哥安安! 我是 罐製罐製 🦉\n
+  請不要攻擊我的後端😥\n
+  如果只是好奇，歡迎隨意逛逛(*/ω＼*)\n
+  同時因為我是前端苦手，若您覺得此專案有可優化或是更好的資源或點子✨\n
+  也歡迎跟我聯絡，也許明年可以一起創造有趣的東西(❁´◡\`❁)\n
+==========\n
+  DC: gordon1045321\n
+  此前端專案: https://github.com/gordon104532/button_with_sound
+`)
+</script>
